@@ -27,6 +27,28 @@ Unit peon =
 	0
 };
 
+Unit mine = 
+{
+	Vec2(3*SCREEN_WIDTH/4, SCREEN_HEIGHT/4),
+	Vec2(0, 0),
+	DIR_N,
+	EUT_MINE,
+	EUS_IDLE,
+	0,
+	0
+};
+
+Unit townHall =
+{
+	Vec2(3*SCREEN_WIDTH/4, 3*SCREEN_HEIGHT/4),
+	Vec2(0, 0),
+	DIR_N,
+	EUT_TOWN_HALL,
+	EUS_IDLE,
+	0,
+	0
+};
+
 // ============================================================================
 // ----------------------------------------------------------------------------
 // ============================================================================
