@@ -10,7 +10,9 @@
 // ============================================================================
 
 extern Unit peon;
-extern Unit grunt; 
+extern Unit grunt;
+extern Unit mine;
+extern Unit townHall;
 
 // ============================================================================
 // ----------------------------------------------------------------------------
