@@ -4,6 +4,7 @@
 - Refactor: (posX, posY) stuff uses Vec2
 - World : stub + unit declaration
 - Rename AnimDesc To SpriteDesc
+- Add selectable mine and town hall unit into World ( + Rendering)
 ===============================================================================
 
 ===============================================================================
